fix: exceptions