@@ -10,6 +10,7 @@ import pieritz.prince.CRMAPP.domain.Invoice;
 import pieritz.prince.CRMAPP.domain.Offer;
 import pieritz.prince.CRMAPP.domain.Product;
 import pieritz.prince.CRMAPP.dto.*;
+import pieritz.prince.CRMAPP.exceptions.OfferNotFoundException;
 import pieritz.prince.CRMAPP.repositories.OfferRepository;
 import pieritz.prince.CRMAPP.services.interfaces.OfferService;
 
@@ -33,7 +34,7 @@ public class OfferServiceImplementation implements OfferService {
     @Override
     public OfferResponse getOfferById(Long id) {
         Offer offer = offerRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Offer not found"));
+                .orElseThrow(() -> new OfferNotFoundException("Offer not found"));
         return offerMapper.toOfferResponse(offer);
     }
 
@@ -42,14 +43,14 @@ public class OfferServiceImplementation implements OfferService {
         Page<Offer> offers = offerRepository.findAll(pageable);
         List<OfferResponse> offerResponses = offers.getContent().stream()
                 .map(offerMapper::toOfferResponse)
-                .collect(Collectors.toList());
+                .toList();
         return new PageImpl<>(offerResponses, pageable, offers.getTotalElements());
     }
 
     @Override
     public OfferResponse updateOffer(Long id, OfferRequest request) {
         Offer offer = offerRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Offer not found"));
+                .orElseThrow(() -> new OfferNotFoundException("Offer not found"));
 
         offerMapper.updateOfferFromRequest(request, offer);
         offer = offerRepository.save(offer);
@@ -59,8 +60,27 @@ public class OfferServiceImplementation implements OfferService {
     @Override
     public void deleteOffer(Long id) {
         Offer offer = offerRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Offer not found"));
+                .orElseThrow(() -> new OfferNotFoundException("Offer not found"));
         offerRepository.delete(offer);
+    }
+
+    @Override
+    public Page<OfferResponse> getOffersByContactId(Long contactId, Pageable pageable) {
+        Page<Offer> offers = offerRepository.findByKontaktId(contactId, pageable);
+        return offers.map(offerMapper::toOfferResponse);
+    }
+
+    @Override
+    public long countByStatus(String status) {
+        return offerRepository.countByStatus(status);
+    }
+
+
+
+    @Override
+    public Page<OfferResponse> getOffersByDescription(String description, Pageable pageable) {
+        Page<Offer> offers = offerRepository.findByLeistungsbezeichnung(description, pageable);
+        return offers.map(offerMapper::toOfferResponse);
     }
 }
 
